--- a/index.html
+++ b/index.html
@@ -1,123 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Card UI</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
     <style>
-        *,
-        *::before,
-        *::after {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        body {
-            background-color: #f1f1f1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .card {
-            background-color: #fff;
-            width: 300px;
-            border-radius: 20px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-            overflow: hidden;
-            text-align: center;
-        }
-        .card .top {
-            background-color: #4070f4;
-            padding: 50px 0 20px;
-            position: relative;
-        }
-        .card img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            border: 5px solid #fff;
-            position: absolute;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        .card h3 {
-            margin-top: 60px;
-            font-weight: bold;
-        }
-        .card p {
-            color: #666;
-            font-size: 14px;
-            margin-bottom: 15px;
-        }
-        .social-icons {
-            margin: 10px 0;
-        }
-        .social-icons i {
-            margin: 0 8px;
-            font-size: 18px;
-            color: #555;
-            cursor: pointer;
-        }
-        .buttons {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            margin: 15px 0;
-        }
-        .buttons button {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 25px;
-            background-color: #4070f4;
-            color: #fff;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-        .buttons button:hover {
-            background-color: #3059c9;
-        }
-        .stats {
-            display: flex;
-            justify-content: space-around;
-            padding: 15px 0;
-            border-top: 1px solid #eee;
-        }
-        .stats i{
-            margin-right: 5px;
-            color: #666;
-        }
-        .stats span {
-            font-size: 14px; color: #444;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        background-color: #f1f1f1;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+      }
+
+      .card {
+        background-color: #fff;
+        width: 300px;
+        border-radius: 20px;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+        text-align: center;
+      }
+
+      .card .top {
+        background-color: #4070f4;
+        padding: 80px 0 20px;
+        position: relative;
+      }
+
+      .profile-pic {
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        background: linear-gradient(
+          135deg,
+          #feda75,
+          #fa7e1e,
+          #d62976,
+          #962fbf,
+          #4f5bd5
+        );
+        padding: 4px;
+        position: absolute;
+        top: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      }
+
+      .profile-pic img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 50%;
+        border: 4px solid #fff;
+      }
+
+      .card h3 {
+        margin-top: 50px;
+        font-weight: bold;
+      }
+
+      .card p {
+        color: #666;
+        font-size: 14px;
+        margin-bottom: 15px;
+      }
+
+      .social-icons {
+        margin: 10px 0;
+      }
+
+      .social-icons i {
+        margin: 0 8px;
+        font-size: 24px;
+        color: #555;
+        cursor: pointer;
+        transition: color 0.3s ease;
+      }
+      .social-icons .fa-facebook-f:hover {
+        color: #1877f2; /* FB Blue */
+      }
+
+      .social-icons .fa-youtube:hover {
+        color: #ff0000; /* YouTube Red */
+      }
+
+      .social-icons .fa-instagram:hover {
+        color: #e1306c; /* IG Pink */
+      }
+
+      .social-icons .fa-twitter:hover {
+        color: #1da1f2; /* Twitter Blue */
+      }
+      .buttons {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        margin: 15px 0;
+      }
+
+      .buttons button {
+        padding: 10px 20px;
+        border: none;
+        border-radius: 25px;
+        background-color: #4070f4;
+        color: #fff;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+
+      .buttons button:hover {
+        background-color: #3059c9;
+      }
+
+      .stats {
+        display: flex;
+        justify-content: space-around;
+        padding: 15px 0;
+        border-top: 1px solid #eee;
+      }
+
+      .stats i {
+        margin-right: 5px;
+        color: #666;
+      }
+
+      .stats span {
+        font-size: 14px;
+        color: #444;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="card">
-        <div class="top">
-            <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Profile" />
+      <div class="top">
+        <div class="profile-pic">
+          <img src="yafer.jpg" alt="Profile" />
         </div>
-        <h3>YaferDev</h3>
-        <p>Web Developer & Content Creator</p>
-        <div class="social-icons">
-            <i class="bx bxl-facebook"></i>
-            <i class="bx bxl-twitter"></i>
-            <i class="bx bxl-instagram"></i>
-            <i class="bx bxl-youtube"></i>
-        </div>
-        <div class="buttons">
-            <button>Subscribe</button>
-            <button>Message</button>
-        </div>
-        <div class="stats">
-            <span><i class="far fa-heart"></i>60.4k</span>
-            <span><i class="far fa-comment"></i>20k</span>
-            <span><i class="fas fa-share"></i>12.4k</span>
-        </div>
+      </div>
+      <h3>YaferDev</h3>
+      <p>Web Developer & Content Creator</p>
+      <div class="social-icons">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-youtube"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+      </div>
+      <div class="buttons">
+        <button>Subscribe</button>
+        <button>Message</button>
+      </div>
+      <div class="stats">
+        <span><i class="fas fa-heart"></i> 600.4k</span>
+        <span><i class="far fa-comment"></i> 210k</span>
+        <span><i class="fas fa-share"></i> 15.4k</span>
+      </div>
     </div>
-</body>
+  </body>
 </html>
