--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       .card p {
         color: #666;
         font-size: 14px;
+        margin-top: 10px;
         margin-bottom: 15px;
       }
 
